--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,19 +1,14 @@
+{% extends 'blog/base.html' %}
+
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Raul´s blog</title>
-  </head>
-  <body>
-    <div class="">
-      <h1><a href="/">Django Girls Blog</a></h1>
-    </div>
-    {% for post in posts %}
-      <div class="">
+{% block content %}
+  {% for post in posts %}
+    <div class="post">
+      <div class="date">
         <p> publicado: {{ post.published_date }}</p>
-        <h1><a href="">{{ post.title }} </a></h1>
-        <p>{{ post.text|linebreaksbr }}</p>
       </div>
-    {% endfor %}
-  </body>
-</html>
+      <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }} </a></h1>
+      <p>{{ post.text|linebreaksbr }}</p>
+    </div>
+  {% endfor %}
+{% endblock %}
