--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -11,7 +11,7 @@
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active{
-  color: #ffffff;
+  color: #fff;
   font-size: 36pt;
   text-decoration: none;
 }
@@ -29,6 +29,10 @@ h1, h2, h3, h4 {
   color: #828282;
 }
 
+.commentCount {
+  color:  #ff9400;
+}
+
 .save {
   float: right;
 }
@@ -38,10 +42,15 @@ h1, h2, h3, h4 {
 }
 
 .top-menu, .top-menu:hover, .top-menu:visited {
-  color: #ffffff;
+  color: #fff;
   float: right;
-  font-size: 26pt;
+  font-size: 16pt;
   margin-right: 20px;
+  decoration: none;
+}
+
+small a, small a:visited, small a:active {
+  color: #fff;
 }
 
 .post{
@@ -51,5 +60,19 @@ h1, h2, h3, h4 {
 }
 
 .post h1 a, .post h1 a:visited {
-  color: #000000;
+  color: #0d1b2d;
+}
+
+.btn {
+  color: #ff9400;
+  background-color: #fff;
+}
+
+.btn:visited {
+  color: #ff9400;
+  background-color: #828282;
+}
+
+.comment {
+  margin: 20px 0px 20px 20px
 }
