--- a/blog/templates/blog/add_comment_to_post.html
+++ b/blog/templates/blog/add_comment_to_post.html
@@ -2,9 +2,9 @@
 
 <!DOCTYPE html>
 {% block content %}
-  <h1>New post</h1>
+  <h1>New Comment</h1>
   <form class="post-form" method="POST">{% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="btn">Save</button>
+    <button type="submit" class="save btn btn-default">Send</button>
   </form>
 {% endblock %}
